ヘッダー変更

--- a/index.html
+++ b/index.html
@@ -14,14 +14,15 @@
     <header class="header">
       <div class="inner">
         <div class="header-wrapper">
-          <h1 class="header-logo">ロゴ</h1>
+          <h1 class="header-logo">
+            <a href="/" class="header-logo__link">ロゴ</a></h1>
           <nav class="header-nav">
             <ul class="header-nav__list">
-              <li class="header-nav__list-item"><a href="" class="header-nav__list-link">TOP</a></li>
-              <li class="header-nav__list-item"><a href="" class="header-nav__list-link">SERVICE</a></li>
-              <li class="header-nav__list-item"><a href="" class="header-nav__list-link">PROFILE</a></li>
-              <li class="header-nav__list-item"><a href="" class="header-nav__list-link">WORKS</a></li>
-              <li class="header-nav__list-item"><a href="" class="header-nav__list-link">CONTACT</a></li>
+              <li class="header-nav__list-item"><a href="" class="header-nav__list-link">トップ</a></li>
+              <li class="header-nav__list-item"><a href="" class="header-nav__list-link">メニュー</a></li>
+              <li class="header-nav__list-item"><a href="" class="header-nav__list-link">メニュー</a></li>
+              <li class="header-nav__list-item"><a href="" class="header-nav__list-link">メニュー</a></li>
+              <li class="header-nav__list-item"><a href="" class="header-nav__list-link">メニュー</a></li>
             </ul>
           </nav>
         </div>
@@ -33,6 +34,11 @@
         <div class="inner"></div>
       </section>
     </main>
+
+    <footer class="fotter">
+
+      <div class="inner"></div>
+    </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="js/script.js"></script>
