--- a/index.html
+++ b/index.html
@@ -34,9 +34,8 @@
         <div class="inner"></div>
       </section>
     </main>
-
-    <footer class="fotter">
-
+    
+    <footer class="footer">
       <div class="inner"></div>
     </footer>
 
