--- a/index.html
+++ b/index.html
@@ -14,17 +14,16 @@
     <header class="header">
       <div class="inner">
         <div class="header-wrapper">
-          <h1 class="header-logo">
-            <a href="/" class="header-logo__link">ロゴ</a></h1>
-          <nav class="header-nav">
-            <ul class="header-nav__list">
-              <li class="header-nav__list-item"><a href="" class="header-nav__list-link">トップ</a></li>
-              <li class="header-nav__list-item"><a href="" class="header-nav__list-link">メニュー</a></li>
-              <li class="header-nav__list-item"><a href="" class="header-nav__list-link">メニュー</a></li>
-              <li class="header-nav__list-item"><a href="" class="header-nav__list-link">メニュー</a></li>
-              <li class="header-nav__list-item"><a href="" class="header-nav__list-link">メニュー</a></li>
+          <h1 class="header-logo"><a href="/" class="header-logo__link">ロゴ</a></h1>
+          <nav class="global-nav">
+            <ul class="global-nav-list">
+              <li class="global-nav-list__item"><a href="" class="global-nav-list__link">トップ</a></li>
+              <li class="global-nav-list__item"><a href="" class="global-nav-list__link">メニュー</a></li>
+              <li class="global-nav-list__item"><a href="" class="global-nav-list__link">メニュー</a></li>
+              <li class="global-nav-list__item"><a href="" class="global-nav-list__link">メニュー</a></li>
+              <li class="global-nav-list__item"><a href="" class="global-nav-list__link">メニュー</a></li>
             </ul>
-          </nav>
+          </nav> 
         </div>
       </div>
     </header>
